--- a/style.css
+++ b/style.css
@@ -45,31 +45,121 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+    
 }
-/* custom style */
+/* coustom style */
 
-body{
-    font-size: 16px;
-    font-family: "open sans", sans-serif;
-    line-height: 1.5;
-    padding: 32px;
-}
 *,
 *::before,
-*::after {
+*::after{
     box-sizing: border-box;
 }
-/* form */
-form{
-    max-width: 400px;
-    margin: 0 auto;
-    border-radius: 8px;
-    padding: 16px;
-    background-color: #f4f7f8 ;
+a{
+    text-decoration: none;
 }
-h1{
-    font-size: 24px;
-    color: #272727;
-    text-align: center;
+
+/* general */
+body{
+    font-family: "roboto", sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+}
+/* container */
+
+.container {
+    max-width: 1320px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 32px;
+}
+/* flex */
+.flex{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.flex-48 {
+    flex: 0 1 48;
+}
+main{
+    background: url(../assets/bg-intro-desktop.png) no-repeat, linear-gradient(#fd7979,#FD7979) ;
+    height: 100vh;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+}
+.intro-text{
+    padding-right: 32px;
+}
+.heading{
+    font-size: 56px;
+    color: #ffffff;
     font-weight: 700;
 }
+.text{
+    color: #ffffff;
+    font-size: 18px;
+    margin-top: 24px;
+
+}
+.btn{
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    padding: 16px 24px;
+    color: #ffffff;
+    border-radius: 6px;
+    
+}
+.btn strong{
+    font-weight: 700;
+}
+.btn-primary{
+    background-color: #5054a3;
+    font-weight: 300;
+    margin-bottom: 32px;
+    box-shadow: 0 8px 0 rgba(0, 0, 0, 0.2);
+
+}
+form{
+    background-color: #ffffff;
+    padding: 32px;
+    border-radius: 8px;
+ 
+}
+.form-control{
+    display: inline-block;
+    width: 100%;
+    padding: 16px 24px;
+    margin-bottom: 16px;
+    border: 1px solid #cccc;
+    border-radius: 6px;
+    font-size: 18px;
+    outline: 0;
+}
+.form-control:focus{
+    border-color: #5D54A3;
+}
+.btn-secondary{
+    border: 0;
+    box-shadow: none;
+    background-color: #37CCBA;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 600;
+    border-bottom: 4px solid rgba(0, 0, 0, 0.2);
+    letter-spacing: 0.04px;
+}
+form p {
+    text-align: center;
+    color: #cccc;
+    font-size: 14px;   
+    margin-top: 12px; 
+}
+form p a{
+    color: #fd7979;
+    font-weight: 600;
+    margin-left: 6px;
+}
+
+
